# sjasmplus

./: .gitignore  CMakeLists.txt  ChangeLog  ChangeLog.md  LICENSE  Makefile  Makefile.win32  README.md  build_linux.sh  build_macos.sh  build_windows.sh  devices.cpp  direct.cpp  direct.h  directives.cpp  io_snapshots.cpp  io_trd.cpp  loose.cpp  loose.h  lua_sjasm.cpp  lua_sjasm.h  parser.cpp  parser.h  piz80.cpp  piz80.h  reader.cpp  reader.h  sjasm.cpp  sjasm.h  sjasmce.vcproj  sjasmplus.cbp  sjasmplus.depend  sjasmplus.sln  sjasmplus_conf.h.in  sjasmwin32.vcproj  sjdefs.h  sjio.cpp  sjio.h  support.cpp  support.h  (+3 more)
docs/: documentation.html  documentation.xml  ifused.xml  luabit3.xml  winexec.xml
docs-html/: index.html
luace5.1/: errno.h  lauxlib.c  liolib.c  loadlib.c  loslib.c  lua.h  luace.c  luace.h  luaconf.h
portsdk/include/: assert.h  cestdlib.h  cetchar.h  console.h  errno.h  io.h  signal.h  string.h  time.h  wincon.h
portsdk/include/stl/: bitset  char_traits.h  defalloc.h  function.h  functional  iterator  iterator.h  numeric  readme.txt  ropeimpl.h  stl_algobase.h  stl_alloc.h  stl_config.h  stl_construct.h  stl_hash_fun.h  stl_iterator.h  stl_rope.h  stl_string_fwd.h  string  tempbuf.h  wce_defs.h
portsdk/include/sys/: timeb.h  utime.h
portsdk/lib/: ccrtrtti.lib  portlib.lib  portlibd.lib
regression/: Makefile
regression/custom/: Makefile  test.asm  test.lst  test.sym  trd.$t  trd.asm  trd.trd
regression/listing/: Makefile  cp1251.lst  cp866.lst  define.asm  define.lst  disp_missed_code.lst  forward_label.asm  forward_label.lst  incbin.asm  incbin.lst  labels.lst  macro.lst  module.lst  reassign_label.lst  structure.asm  structure.lst  utf8.lst
regression/listing/future/: cond_asm_in_dup.asm
regression/negative/: Makefile  duplicated_define.asm  duplicated_define.out  duplicated_equ.asm  duplicated_equ.out  duplicated_label.asm  duplicated_label.out  wrong_index_offset.asm  wrong_index_offset.out
sjasm/: codeemitter.cpp  codeemitter.h  defines.cpp  defines.h  devices.cpp  devices.h  directives.cpp  directives.h  errors.cpp  errors.h  filename.h  fs.h  fsutil.cpp  global.cpp  global.h  io_snapshots.cpp  io_snapshots.h  io_tape.cpp  io_tape.h  io_trd.cpp  io_trd.h  labels.cpp  labels.h  listing.cpp  listing.h  lua_lpack.c  lua_sjasm.cpp  lua_sjasm.h  lua_sjasm.pkg  lua_support.cpp  lua_support.h  memory.cpp  memory.h  modules.cpp  modules.h  options.cpp  options.h  parser.cpp  parser.h  reader.cpp  (+16 more)
sjasmce/: resourceppc.h  sjasmce.cpp  sjasmce.h  sjasmceppc.aps  sjasmceppc.rc  stdafx.cpp  stdafx.h
src/: asm.cpp  asm.h  codeemitter.cpp  codeemitter.h  defines.h  directives.cpp  directives.h  errors.cpp  errors.h  fs.h  fsutil.h  global.cpp  global.h  io_snapshots.cpp  io_snapshots.h  io_tape.cpp  io_trd.cpp  io_trd.h  labels.cpp  labels.h  listing.cpp  listing.h  lua_sjasm.cpp  lua_sjasm.h  lua_sjasm.pkg  lua_support.cpp  lua_support.h  memory.cpp  memory.h  message.h  message_backend.h  message_if.cpp  message_if.h  modules.cpp  modules.h  options.cpp  options.h  parser.cpp  parser.h  reader.cpp  (+15 more)
src/asm/: common.h  define.cpp  define.h  export.cpp  export.h  expr.h  macro.cpp  macro.h  modules.cpp  modules.h  struct.cpp  struct.h
src/parser/: common.cpp  common.h  define.cpp  define.h  defines.cpp  defines.h  directives.h  macro.cpp  macro.h  message.cpp  message.h  parse.h  parser.h  state.h  struct.cpp  struct.h
tests/: CMakeLists.txt  Z80Tests.cpp  gen_z80tests.py  testDriver.hs  z80tests.cpp  z80testutil.h
tests/dup/: dup.asm  dup.out
tests/sna/: 01-empty.asm  01-empty.sna
